...
export function ThresholdChangeDisplay({ txInfo, executionInfo }: ThresholdChangeDisplayProps) {
  const hasThresholdChanged = txInfo.settingsInfo?.threshold !== executionInfo.confirmationsRequired

  if (!hasThresholdChanged) {
    return (
      <XStack alignItems="center" justifyContent="space-between">
        <InfoSheet info="Confirmations required for new transactions">
          <XStack alignItems="center" gap="$1">
            <Text color="$textSecondaryLight">Confirmations</Text>
            <SafeFontIcon name="info" size={16} color="$textSecondaryLight" />
          </XStack>
        </InfoSheet>
        <XStack alignItems="center" gap="$2">
          <Text fontSize="$4" testID="threshold-change-display-threshold">
            {txInfo.settingsInfo?.threshold}
          </Text>
        </XStack>
      </XStack>
    )
  }
...
