...

interface ParametersButtonProps {
  txId: string
  title?: string
}

export function ParametersButton({ txId, title = 'Transaction details' }: ParametersButtonProps) {
  const goToAdvancedDetails = () => {
    router.push({
      pathname: '/transaction-parameters',
      params: { txId },
    })
  }
...
