...
    icon: <SafeFontIcon name="wallet" size={16} />,
    Image: Seed,
    imageProps: { marginBottom: -31 },
    onPress: () => router.push(`/import-signers/import-private-key`),
  },
  {
    name: 'connectSigner',
    title: 'Connect signer',
    description: 'Connect any signer via one of your installed wallet apps.',
    icon: <SafeFontIcon name="add-owner" size={16} />,
    Image: Metamask,
    imageProps: { marginBottom: -48 },
  },
...
