...
  return (
    <KeyboardAvoidingView behavior="padding" style={styles.flex1} keyboardVerticalOffset={top + CUSTOM_VERTICAL_OFFSET}>
      <ScrollView flex={1}>
        <View marginTop="$2">
          <SectionTitle
            paddingHorizontal={0}
            title="Name your signer"
            description={`You are connecting ${truncatedAddress}.\nChoose a name for your new signer, you can change it later.`}
          />
        </View>

        <View marginTop="$6">
          <Controller
...
              <SafeInput
                value={value}
                onBlur={onBlur}
                onChangeText={onChange}
                placeholder="Enter signer name"
                error={!!errors.name}
                testID="name-signer-input"
                left={<Identicon address={address} size={40} />}
                right={
                  value ? (
                    <Pressable onPress={onClear} hitSlop={12} testID="clear-name-button">
                      <SafeFontIcon name="close" size={16} color="$colorSecondary" />
                    </Pressable>
...
