...
            <SafeButton danger={true} onPress={onDeleteLedgerConnection}>
              Delete connection
            </SafeButton>
          ) : isWcSigner ? (
            <YStack gap="$3">
              {onReconnectWallet && !isWcConnected && (
                <SafeButton onPress={onReconnectWallet} testID="reconnect-wallet-button">
                  Reconnect wallet
                </SafeButton>
              )}
              <SafeButton danger={true} onPress={onRemoveWcSigner} testID="remove-wc-signer-button">
                Remove signer
              </SafeButton>
...
