...
                      <Text fontWeight="bold" textAlign="center" fontSize={'$4'}>
                        {owners.length}
                      </Text>
                    </SafeSkeleton>
                  </View>
                  <Text color="$colorHover" fontSize={'$3'}>
                    Signers
                  </Text>
                </YStack>

                <YStack
                  alignItems="center"
                  backgroundColor={'$background'}
...
                    onPress={() => {
                      router.push('/signers')
                    }}
                  >
                    <SafeListItem
                      label={'Signers'}
                      testID="settings-signers-list-item"
                      leftNode={<SafeFontIcon name={'owners'} color={'$colorSecondary'} />}
                      rightNode={
                        <View flexDirection={'row'} alignItems={'center'} justifyContent={'center'}>
                          <SafeSkeleton height={17}>
                            <Text minWidth={15} marginRight={'$3'} color={'$colorSecondary'}>
                              {owners.length}
...
